Fix spacing for visual section under landing page

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 .section-container{
     display: flex;
     flex-direction: column;
-    width: 75%;    
+    width: 75%;        
     /* position: relative; */
     /* border: 2px solid red; */
 }
@@ -113,7 +113,7 @@ header ul{
     /* outline: 2px solid red;    */
     flex: 1; 
     gap: 50px;
-    margin: 50px 0px;
+    margin: 80px 0px;    
 }
 .visual-left > h1{
     color: var(--main-text-color);
@@ -133,11 +133,13 @@ header ul{
 }
 
 .visual-left{
-    flex-basis: 45%;    
+    flex-grow: 1;
+    flex-basis: 45%;  
+    flex-shrink: 0;  
 }
 
 .visual-right{
-    flex-grow: 1;   
+    flex-grow: 3;   
     flex-basis: 300px;
     box-shadow: 0px -15px 15px -15px rgba(255, 255, 255, 0.1);
 }
